--- a/lib/Components/components/media/audio.html
+++ b/lib/Components/components/media/audio.html
@@ -168,7 +168,6 @@
 		:host-context(media-player) [player] > track-item{
 			margin:0;
 		}
-
 		:host-context(media-player) [control-container] > *{
 			margin: 0 1% 0 1%;
 		}
@@ -201,7 +200,6 @@
 			box-sizing: border-box;
 			letter-spacing: -0.5px;
 			position:relative;
-			/*font-style: italic;*/
 			font-family:'SF Mono', 'Operator Mono', 'Source Sans Pro', Menlo, Monaco, Consolas, Courier New, monospace;
 
 		}
@@ -219,9 +217,19 @@
 
 
 	<div selector></div>
-	<!--<media-button no-border icon-name=drag class="sort-handle"></media-button>-->
 
-	<div player class="ap" id="ap" gui horizontal center-center wrap></div>
+	<div player class="ap" id="ap" gui horizontal center-center wrap>
+		<div track-number-container flex gui vertical center-center>
+			<div track-number gui horizontal center></div>
+		</div>
+		<media-playback gui horizontal flex id="playback" class="ap__item--playback"></media-playback>
+		<track-item gui flex-max id="track"></track-item>
+		<div control-container gui horizontal center-center around-justified>
+			<media-button id=album></media-button>
+			<div control-space></div>
+			<media-volume id=volume></media-volume>
+		</div>
+	</div>
 
 	<div album>
 		<track-lyrics></track-lyrics>
@@ -231,21 +239,8 @@
 </template>
 <script id="media-audio">
 	(function (doc) {
-		const MediaAudio = wwi.button(doc)
+		const MediaAudio = wwi.element(doc)
 		const Sound = fxy.require('media/Sound')
-		const connected_events = ['playback', 'track']
-		const connected_elements = Symbol.for('connected elements')
-
-		const html = `<div track-number-container flex gui vertical center-center>
-							<div track-number gui horizontal center></div>
-						</div>
-					  <media-playback gui horizontal flex id="playback" class="ap__item--playback"></media-playback>
-					  <track-item gui flex-max id="track"></track-item>
-					  <div control-container gui horizontal center-center around-justified>
-					    <media-button id=album></media-button>
-						<div control-space></div>
-						<media-volume id=volume></media-volume>
-					  </div>`;
 		const player_track = Symbol.for('audio is in a media player')
 
 
@@ -270,57 +265,57 @@
 						break
 				}
 			}
+
 			connected() {
-				this[connected_elements] = new Set()
-				this.query('[player]').innerHTML = html
-				for (let type of connected_events) {
-					let element = this[type]
-					if (element.isConnected) {
-						this.connected_element({type: `${type} connected`, currentTarget: element})
-					} else {
-						element.on(`${type} connected`, this.connected_element.bind(this))
-					}
+				this.setAttribute('role','option')
+				if(!this.is_player_item){
+					this.on('click',e=>{
+						this.play()
+					})
 				}
-			}
-			connected_element(e) {
-				if(fxy.is.data(e) && 'type' in e) this[connected_elements].add(e.type)
 
-				if (this[connected_elements].size === connected_events.length) {
+				this.on('sound', e => {
+					this.track.controller = this
+					this.volume.controller = this
+					this.update_song_data(e.detail)
+				})
 
-					this.on('sound', e => {
-						this.track.controller = this
-						this.volume.controller = this
-						this.update_song_data(e.detail)
-					})
+				this.on('duration', (e) => {
+					let duration = e.detail
+					this.duration.minutes = duration.minutes
+					this.duration.seconds = duration.seconds
+				})
 
-					this.on('duration', (e) => {
-						let duration = e.detail
-						this.duration.minutes = duration.minutes
-						this.duration.seconds = duration.seconds
-					})
+				this.on('canplay', (e) => {
+					if (this.waiting_to_play) {
+						delete this.waiting_to_play
+						this.play()
+					}
+				})
 
-					this.on('canplay', (e) => {
-						if (this.waiting_to_play) {
-							delete this.waiting_to_play
-							this.play()
-						}
-					})
+				this.lyrics.addEventListener('aria-disabled',e=>this.setAttribute(e.type,e.detail))
 
-					this.lyrics.addEventListener('aria-disabled',e=>this.setAttribute(e.type,e.detail))
+				this.on('time', update_time)
 
-					this.on('time', update_time)
 
-					this.sound = Sound(this)
 
+				if(this.color){
+					this.volume.fill=this.color
+					this.lyrics.fill=this.color
+					this.query('media-button#album').setAttribute('fill',this.color)
+					this.style.color = this.color
+				}
+
+				fxy.on(()=>{
+					if(this.color) this.playback.fill=this.color
 					this.playback.on('play',() => this.play())
-
-					if(player_track in this){
-						this.query('[track-number]').innerHTML = this[player_track]
-					}
+				},this,'playback.on')
 
 
-
+				if(player_track in this){
+					this.query('[track-number]').innerHTML = this[player_track]
 				}
+				this.sound = Sound(this)
 			}
 
 			disconnected(){
@@ -356,29 +351,33 @@
 			update_song_data(sound){
 				let metadata = sound.metadata
 				if(metadata){
-					this.track.song_title.innerHTML = sound.title
-					let album = this.query('#album')
-					if('lyrics' in metadata) {
-						this.lyrics.value = this.sound.metadata.lyrics
-						album.on('click',(e)=>{
-							e.stopPropagation()
-							if(this.hasAttribute('expanded')) this.removeAttribute('expanded')
-							else this.setAttribute('expanded','')
-						})
-					}
-					else {
-						album.style.visibility = 'hidden'
-						album.style.pointerEvents = 'none'
-					}
-					if(this.option === true){
-						this.playback.button.aria.tabindex = -1
-						this.playback.next.aria.tabindex = -1
-						this.playback.back.aria.tabindex = -1
-						this.volume.button.aria.tabindex = -1
-						this.volume.button.aria.tabindex = -1
-						album.aria.tabindex = -1
-						show_hide_controls(this)
-					}
+					fxy.on(()=>{
+						this.track.song_title.innerHTML = sound.title
+						let album = this.query('#album')
+						if('lyrics' in metadata) {
+							this.lyrics.value = this.sound.metadata.lyrics
+
+							album.on('click',(e)=>{
+								e.stopPropagation()
+								if(this.hasAttribute('expanded')) this.removeAttribute('expanded')
+								else this.setAttribute('expanded','')
+							})
+						}
+						else {
+							album.style.visibility = 'hidden'
+							album.style.pointerEvents = 'none'
+						}
+						if(this.option === true){
+							this.playback.button.aria.tabindex = -1
+//							this.playback.next.aria.tabindex = -1
+//							this.playback.back.aria.tabindex = -1
+							this.volume.button.aria.tabindex = -1
+							this.volume.button.aria.tabindex = -1
+							album.aria.tabindex = -1
+							show_hide_controls(this)
+						}
+					},this,'track.song_title')
+
 				}
 			}
 
