--- a/lib/Components/components/media/track/item.html
+++ b/lib/Components/components/media/track/item.html
@@ -1,4 +1,4 @@
-<template id="track-item-template">
+<template id="track-item">
 	<style>
 		@import "modules/wwi/component/design/gui.css";
 		:host {
