--- a/lib/Components/components/optimus-prime/remote-control.html
+++ b/lib/Components/components/optimus-prime/remote-control.html
@@ -98,6 +98,7 @@
 			            prime.skew_y += 1
 		            	break
 	            }
+	            prime.update_transformations()
             }
 		    get down(){ return this.query('[down]') }
             get left(){ return this.query('[left]') }
