--- a/lib/Components/components/search/highlight.html
+++ b/lib/Components/components/search/highlight.html
@@ -5,15 +5,11 @@
             display:block;
         }
     </style>
-    <div view>
-
-    </div>
+    <div view></div>
 </template>
 <script>
     (function(doc){
         const SearchHighlight = wwi.element(doc)
-        SearchHighlight(class extends SearchHighlight.Element{
-
-        })
+        SearchHighlight(class extends SearchHighlight.Element{})
     })(document)
 </script>
