--- a/lib/Components/components/art/palette.html
+++ b/lib/Components/components/art/palette.html
@@ -5,18 +5,17 @@
 	        position:relative;
 	        max-height:100%;
 	        height:100%;
-
         }
         [view]{
 	        background:var(--dark);
 	        max-height:100%;
 	        overflow-y:auto;
-	        width: calc(50vw - 100px);
+	        width: 70vw;
         }
         content-menu{
 	        display: inline-block;
-	        width:100%;
-
+	        width:calc(100% - 43px);
+			height: 100%;
         }
 
 	    content-button{
@@ -28,58 +27,79 @@
 		    position:relative;
 		    background-color: white;
 	    }
+	    [gradient]{
+		    height:60px;
+		    width: 100%;
+		    overflow: hidden;
+	    }
+
+	    [preview]{
+		    position: relative;
+		    box-sizing: border-box;
+		    background-color: transparent;
+		    border-radius: 7px;
+	    }
+        [gradient] [preview]:hover{
+	        background-color: white;
+        }
+        [gradient] [preview]:active{
+	        background-color: black;
+        }
+
+        content-menu content-button[aria-selected="true"]{
+		    border:2px solid white;
+	    }
+	    [tools]{
+		    top:0;
+		    position:-webkit-sticky;
+		    position: sticky;
+		    max-height: 100vh;
+	    }
+        [tools] content-button{
+	        background-color: rgba(255,255,255,0.5);
+        }
+        [tools] content-button[aria-selected="true"]{
+	        background-color: rgba(255,255,255,0.75);
+        }
     </style>
-	<div view>
-		<content-menu grid multi no-header id="colors"></content-menu>
+	<div view gui horizontal>
+		<content-menu grid multi no-header id="colors">
+			<div gradient slot="header">
+				<canvas preview></canvas>
+			</div>
+		</content-menu>
+		<div tools gui vertical>
+			<content-button icon="drop_up" onclick="act.big_preview(event)"></content-button>
+			<content-button icon="drop_down" aria-selected="true" onclick="act.small_preview(event)"></content-button>
+		</div>
 	</div>
 </template>
 <script>
     (function(doc){
-        const ArtPalette = wwi.element(doc).extension({name:'Palette',module:'behavior'})
+        const ArtPalette = wwi.element(doc).extension(...window.components.art.mix('Palette'))
         ArtPalette(class extends ArtPalette.Element{
-        	constructor(){
-        		super('routes',{
-        			url(value){
-        				if(value !== null) this.palette = value
-			        },
-			        gradient_size(value){
-        				if(value !== null){
-        					this.preview.height=value
-					        this.preview.width=value
-					        this.box.style.height =value+'px'
-					        this.view.style.width = `calc(50vw - (10px + ${value}px))`
-				        }
-			        }
-		        })
+	        big_preview(event){
+		        event.currentTarget.setAttribute('aria-selected','true')
+		        event.currentTarget.nextElementSibling.setAttribute('aria-selected','false')
+		        let width = this.gradient.clientWidth
+		        this.gradient.style.height = width+'px'
+		        this.resize_preview(width)
 	        }
 	        connected(){
-		        let timeout_id = null
-	        	this.box = document.createElement('wwe-position')
-		        this.box.setAttribute('no-title','')
-		        this.preview = document.createElement('canvas')
-		        this.preview.setAttribute('preview','')
-		        this.preview.style.boxSizing='border-box'
-		        this.preview.style.position='relative'
-		        this.box.appendChild(this.preview)
-		        document.body.appendChild(this.box)
-
-		        this.gradient_size=100
-
 	        	this.list.item_selector_options = {item:'content-button',role:'option'}
-
+		        this.list.on('select',e=>{
+			        let item = e.detail.item
+			        this.on_selections(this.list.selected,item)
+		        })
 		        this.on('palette items',e=>{
 			        create_items(...(e.detail.reverse())).forEach(item=>this.list.appendChild(item))
 			        this.list.update_items()
 		        })
-
-		        if(!this.url) this.palette = fxy.require('design/colors')
-
-		        this.list.on('select',e=>{
-		        	let item = e.detail.item
-			        if(typeof timeout_id === 'number') timeout_id = window.clearTimeout(timeout_id)
-			        window.requestAnimationFrame(_=>timeout_id=setTimeout(_=>this.on_selections(this.list.selected,item)))
-		        })
+		        this.palette()
+				this.resize_preview()
+		        app.on('resized',e=>this.resize_preview())
 	        }
+	        get gradient(){ return this.query('[gradient]') }
 	        get list(){ return this.query('content-menu') }
 	        on_selections(selected,e){
 	        	let colors = this.current_colors || []
@@ -87,10 +107,24 @@
 		        colors = colors.filter(color=>selected_colors.includes(color))
 		        for(let color of selected_colors) if(!colors.includes(color)) colors.push(color)
 		        this.current_colors = colors
-		        this.box.present(this.box_target || e)
-		        gradient(this.preview,parseInt(this.gradient_size),colors)
+		        gradient(this.preview,this.gradient_size,colors)
 	        }
 	        get palette_options(){ return {number_of_items:3} }
+	        get preview(){ return this.query('[preview]') }
+	        resize_preview(height){
+		        this.gradient_size={ height:height || this.gradient.clientHeight, width:this.gradient.clientWidth }
+		        let size = this.gradient_size
+		        let preview = this.preview
+		        preview.height = size.height
+		        preview.width = size.width
+		        if(this.current_colors) gradient(this.preview,size,this.current_colors)
+	        }
+	        small_preview(event){
+		        event.currentTarget.setAttribute('aria-selected','true')
+		        event.currentTarget.previousElementSibling.setAttribute('aria-selected','false')
+		        this.gradient.style.height = ''
+		        this.resize_preview(60)
+	        }
         })
 
 		//shared actions
@@ -108,13 +142,13 @@
 		    }catch(e){
         		console.error(e)
 		    }
-
 	    }
 
 	    function gradient(canvas,size,colors){
-		    var ctx = canvas.getContext('2d')
-		    let width = fxy.is.number(size) ? size:100
-		    var g1 = ctx.createLinearGradient(0, 0, width, 0);
+		    let ctx = canvas.getContext('2d')
+		    let width = size.width
+		    let g1 = ctx.createLinearGradient(0, 0, width, 0);
+		    ctx.clearRect(0,0,width,size.height)
 
 		    let increment = 1/colors.length
 		    for(let i=0;i<colors.length;i++){
@@ -139,12 +173,12 @@
 //		    ctx.fillRect(250,0,200,200);
 //		    ctx.strokeRect(250,0,200,200);
 
-		    var pattern = ctx.createPattern(canvas, "repeat");
+		    let pattern = ctx.createPattern(canvas, "repeat");
 		    ctx.fillStyle = pattern;
-		    ctx.fillRect(0,0,width,width);
+		    ctx.fillRect(0,0,width,size.height);
 		    ctx.lineWidth = 20;
 		    ctx.strokeStyle = g1;
-		    ctx.strokeRect(0,0,width,width);
+		    ctx.strokeRect(0,0,width,size.height);
 		    ctx.fill();
 		    return pattern
 	    }
