--- a/lib/Components/components/list/item.html
+++ b/lib/Components/components/list/item.html
@@ -1,88 +1,15 @@
 <template id="list-item">
-	<style>
-		@import "/modules/wwi/component/design/host.css";
-
-		:host {
-			display: list-item;
-			position: relative;
-			padding: 0 0 0 30px;
-			text-align: -webkit-match-parent;
-			font-size:14px;
-		}
-		a{
-			text-decoration: none;
-			display: inline-block;
-			vertical-align: middle;
-			position: relative;
-			height: 100%;
-			cursor: pointer;
-		}
-		:host([aria-expanded="true"]) > a:after {
-			color: rgb(136, 187, 153);
-			content: '\2022';
-			margin-left: 1ex;
-		}
-		[section]{
-			margin-right: 1ex;
-			color: rgb(59, 89, 152);
-		}
-		label{
-			cursor: pointer;
-			left: 10px;
-			opacity: 1;
-			padding: 3px 5px 3px 6px;
-			position: absolute;
-			top:2px;
-			transform: rotate(0deg);
-			transition: all 0.18s ease-in-out;
-		}
-		label::before{
-			border-color: rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgba(0, 0, 0, 0) rgb(187, 187, 204);
-			border-style: solid;
-			border-width: 6px 0 6px 7px;
-			content: ' ';
-			display: block;
-			height: 0;
-			width: 0;
-		}
-		#input:checked + label {
-			transform: rotate(90deg);
-		}
-		ol{
-			display: none;
-			list-style: none;
-		}
-		:host([aria-expanded="true"]) ol{
-			display: block;
-		}
-	</style>
-	<a>
-		<span section>${section}</span>${title}
-	</a>
-	<input hidden id="input" type="checkbox">
-	<label for="input"></label>
-	<ol>${items}</ol>
-
+    <style>
+        :host{
+            display:list-item;
+        }
+    </style>
 </template>
 <script>
-	(function (doc) {
-		const ListItem = wwi.custom(doc,'define').extension({name:'Bind',module:'behavior'})
-		ListItem(class extends ListItem.Element {
-			connected(){
-				this.define({
-					type:true,
-					url:true
-				})
-				this.query('a').onclick = e=>this.toggle(e)
-			}
-			toggle(e){
-				let input = this.query('#input')
-				input.checked = !input.checked
-				this.setAttribute('aria-expanded',input.checked)
-				return this
-			}
-			get list(){ return this.query('ol')}
-		})
+    (function(doc){
+        const ListItem = wwi.custom(doc)
+        ListItem(class extends ListItem.Element{
 
-	})(document)
+        })
+    })(document)
 </script>
