--- a/lib/Components/components/window/frame.html
+++ b/lib/Components/components/window/frame.html
@@ -17,11 +17,11 @@
 			box-sizing: border-box;
 			padding-top:20px;
 			padding-bottom:15px;
-
+			overflow: hidden;
 			border: 1px solid rgba(155, 155, 169, 0.35);
 			border-top: 1px solid rgba(155, 155, 169, 0.35);
 			border-bottom: 1px solid rgba(155, 155, 169, 0.35);
-			overflow: hidden;
+
 		}
 
 		[view]{
@@ -32,6 +32,10 @@
 			z-index: 3;
 			box-sizing: border-box;
 			max-width: calc(100% - 1px);
+		}
+		:host([overflow]) [view],
+		:host([overflow]) [frame]{
+			overflow: visible;
 		}
 
 
