--- a/modules/wwi/component/design/css/attr.css
+++ b/modules/wwi/component/design/css/attr.css
@@ -1,10 +1,10 @@
-[block]{ display: block; }
-[inline]{ display: inline-block; }
+html, :root, :host{
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+    font-size: 16px;
+    font-weight: normal;
+}
 
-[absolute]{ position: absolute; }
-[relative]{ position: relative; }
 [fixed]{ position: fixed; }
-
 [hidden]{ display: none !important; }
 [invisible]{ visibility: hidden !important; }
 [visible]{ visibility: visible; }
@@ -66,42 +66,17 @@
 [flex-14]{ -ms-flex: 14; -webkit-flex: 14; flex: 14; }
 [flex-max],[flex-15]{ -ms-flex: 15; -webkit-flex: 15; flex: 15; }
 
-[gui][top]{ top: 0; }
-[gui][right]{ right: 0; }
-[gui][bottom]{ bottom: 0; }
-[gui][left]{ left: 0; }
-
 [gui][disabled]{ opacity:0.8; -webkit-filter:saturate(0); filter:saturate(0); pointer-events: none; cursor: default; }
-
-[fullbleed]{ margin: 0; height: 100vh; }
 [gui][fit]{ position:absolute; top:0; left:0; right:0; bottom:0; }
-
-[scroll-none]{ overflow: hidden; }
-[scroll-x]{ -webkit-overflow-scrolling: touch; overflow: hidden; overflow-x:auto; }
-[scroll-y]{ -webkit-overflow-scrolling: touch; overflow: hidden; overflow-y:auto; }
-[scroll-auto]{ -webkit-overflow-scrolling: touch; overflow: auto; }
 
 [sudo][before]:before, [sudo][after]:before{ content:''; position:absolute; top:0; left:0; right:0; bottom:0; display: block; border-radius: inherit; box-sizing: border-box; }
 [sudo][bg] > *{ z-index: 1; }
 [sudo][before][bg]:before, [sudo][after][bg]:after{ background: inherit; z-index: -1; }
 
-[drag-handle],[draggable]{ cursor: move; cursor: grab; cursor: -moz-grab; cursor: -webkit-grab; }
-[drag-handle]:active,
-[draggable]:active{ cursor: grabbing; cursor: -moz-grabbing; cursor: -webkit-grabbing; }
-
 [select-none]{ -moz-user-select: none; -ms-user-select: none; -webkit-user-select: none; user-select: none; }
 [select-text]{ -webkit-user-select: text; -moz-user-select: text; -ms-user-select: text; user-select: text; }
 [select-all]{ -ms-user-select: element; -moz-user-select: all; user-select: all; }
 [select-content]{ -ms-user-select: element; -moz-user-select: all; user-select: contain; }
-
-[pointer]{ pointer-events: auto; cursor: default; }
-[pointer-none]{ pointer-events: none; }
-
-[view]{
-    min-height: 100%;
-    position: relative;
-    width: 100%;
-}
 
 [translate]{
     opacity: 1;
