--- a/modules/wwi/component/design/css/scrollbar.css
+++ b/modules/wwi/component/design/css/scrollbar.css
@@ -1,4 +1,3 @@
-@import "scroll-view.css";
 body::-webkit-scrollbar { height: 13px; overflow: visible; width: 13px; }
 body::-webkit-scrollbar-button { height: 0; width: 0; }
 body::-webkit-scrollbar-corner { background: rgba(0, 0, 0, 0); }
@@ -23,3 +22,9 @@ body::-webkit-scrollbar-track-piece {
     border: solid rgba(245, 245, 245, 0.47);
     border-width: 0 0 0 3px;
 }
+
+
+[scroll-none]{ overflow: hidden; }
+[scroll-x]{ -webkit-overflow-scrolling: touch; overflow: hidden; overflow-x:auto; }
+[scroll-y]{ -webkit-overflow-scrolling: touch; overflow: hidden; overflow-y:auto; }
+[scroll-auto]{ -webkit-overflow-scrolling: touch; overflow: auto; }
