--- a/modules/wwi/component/design/host.css
+++ b/modules/wwi/component/design/host.css
@@ -1,1 +1,50 @@
-@import "host/index.css";
+@import "gui.css";
+:host{
+    display: block;
+    position: relative;
+    -moz-perspective: 1000px;
+    -ms-perspective: 1000px;
+    -webkit-perspective: 1000px;
+    perspective:1000px;
+}
+
+
+[view]{
+    position: relative;
+    min-height: 100%;
+    width: 100%;
+}
+:host([app-view]) [view]{
+    height: 100%;
+}
+
+[view]::-webkit-scrollbar { height: 13px; overflow: visible; width: 13px; }
+
+[view]::-webkit-scrollbar-button { height: 0; width: 0; }
+
+[view]::-webkit-scrollbar-corner { background: rgba(0, 0, 0, 0); }
+
+[view]::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .2);
+    background-clip: padding-box;
+    border: solid rgba(0, 0, 0, 0);
+    min-height: 28px;
+    padding: 100px 0 0;
+    border-radius: 100px;
+    box-shadow: inset 0px 0px 0 1px rgba(255, 255, 255, .1), inset 1px 1px 0 rgba(0, 0, 0, .1), inset 0 -1px 0 rgba(0, 0, 0, .07);
+}
+
+[view]::-webkit-scrollbar-track {
+    background-clip: padding-box;
+    border: solid rgba(0, 0, 0, 0);
+    border-width: 0 0 0 4px;
+}
+
+[view]::-webkit-scrollbar-track-piece {
+    background-clip: padding-box;
+    background-color: rgba(245, 245, 245, 0.47);
+    border: solid rgba(245, 245, 245, 0.47);
+    border-width: 0 0 0 3px;
+}
+
+
