--- a/modules/wwi/component/design/css/aria.css
+++ b/modules/wwi/component/design/css/aria.css
@@ -1,29 +1,64 @@
-button{
+[aria-grabbed="false"]{ cursor: move; cursor: grab; cursor: -moz-grab; cursor: -webkit-grab;  }
+[aria-grabbed="true"]{  cursor: grabbing; cursor: -moz-grabbing; cursor: -webkit-grabbing;  }
+
+
+button, input{
     -webkit-appearance: none;
     appearance:none;
-    border:2px solid transparent;
     box-sizing: border-box;
+    outline: none;
+    border-radius: 5px;
+    min-height: 25px;
+    font-size: 1em;
+    padding-top:6px;
+    padding-bottom: 6px;
+    border-width: 0;
+    transition-property: background, box-shadow;
+    transition-timing-function: ease-in-out;
+    transition-duration: 180ms;
+    will-change: background, box-shadow;
+}
+
+button{
     cursor: pointer;
     font-weight: 900;
     color:var(--azul);
-    border-radius: 7px;
     background: white;
-    outline: none;
 }
 
 button:hover{
     color:var(--azul-bright);
     border-color:var(--day);
+    box-shadow: 0 0 1px 2px var(--day);
 }
+
 button:focus{
     border-color:var(--azul-bright);
+    box-shadow: 0 0 1px 2px var(--azul);
 }
+
 button:active{
     color:var(--azul-dark);
-    border-color:var(--azul-dark);
+    border-color:var(--azul);
+    box-shadow: 0 0 2px 0px var(--azul-dark);
 }
+
 button[aria-selected="true"]{
     color:var(--azul-dark);
 }
-[aria-grabbed="false"]{ cursor: move; cursor: grab; cursor: -moz-grab; cursor: -webkit-grab;  }
-[aria-grabbed="true"]{  cursor: grabbing; cursor: -moz-grabbing; cursor: -webkit-grabbing;  }
+
+input{
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgb(0, 0, 0);
+    box-sizing: border-box;
+    padding-left:10px;
+}
+
+input:focus{
+    background: rgba(255, 255, 255, 1);
+}
+
+
+
