--- a/lib/Components/components/browser/section.html
+++ b/lib/Components/components/browser/section.html
@@ -1,6 +1,6 @@
-<template id="browser-section-template">
+<template id="browser-section">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/host.css";
 		:host {
 			display: none;
 			position: relative;
