--- a/lib/Components/components/code/editor.html
+++ b/lib/Components/components/code/editor.html
@@ -1,6 +1,6 @@
 <template id="code-editor">
 	<style>
-		@import "/components/code/design.css";
+		@import "components/code/design.css";
 		:host {
 			--code-font-size:var(--code-size,15px);
 			display: block;
