--- a/lib/Components/components/code/π/π.html
+++ b/lib/Components/components/code/π/π.html
@@ -1,6 +1,6 @@
-<template id="code-π-template">
+<template id="code-π">
 	<style>
-		@import '/components/code/π/design.css';
+		@import 'components/code/π/design.css';
 	</style>
 	<slot>π</slot>
 </template>
