--- a/lib/Components/components/media/playback.html
+++ b/lib/Components/components/media/playback.html
@@ -1,4 +1,4 @@
-<template id="media-playback-template">
+<template id="media-playback">
 	<style>
 		@import "modules/wwi/component/design/gui.css";
 		:host {
