--- a/lib/Components/components/select/option.html
+++ b/lib/Components/components/select/option.html
@@ -1,10 +1,9 @@
-<template id="select-option-template">
+<template id="select-option">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/host.css";
 		:host {
 			--margin:var(--option-margin,8px);
 			--bg:var(--option-background,rgba(245, 245, 255, 0.91));
-
 			background-color: var(--bg);
 			box-sizing: content-box;
 			cursor: pointer;
