--- a/lib/Components/components/tab/container.html
+++ b/lib/Components/components/tab/container.html
@@ -1,6 +1,6 @@
 <template id="tab-container">
 	<style>
-		@import "/modules/wwi/design/host.css";
+		@import "modules/wwi/design/host.css";
 		:host {
 			--list-height:33px;
 			display: block;
