--- a/lib/Components/components/tab/view.html
+++ b/lib/Components/components/tab/view.html
@@ -1,6 +1,6 @@
 <template id="tab-view">
 	<style>
-		@import "/modules/wwi/design/host.css";
+		@import "modules/wwi/design/host.css";
 		:host {
 			box-sizing: border-box;
 
