--- a/lib/Components/components/window/footer.html
+++ b/lib/Components/components/window/footer.html
@@ -1,7 +1,7 @@
-<template id="window-footer-template">
+<template id="window-footer">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
-		@import "/modules/wwi/component/design/ui/white.css";
+		@import "modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/ui/white.css";
 		:host {
 			position: absolute;
 			padding:7px 9px 7px 9px;
