--- a/lib/Components/components/window/frame.html
+++ b/lib/Components/components/window/frame.html
@@ -1,7 +1,7 @@
-<template id="window-frame-template">
+<template id="window-frame">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
-		@import "/modules/wwi/component/design/ui/white.css";
+		@import "modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/ui/white.css";
 
 		:host{
 			--ui-bar-height:30px;
