--- a/lib/Components/components/window/header.html
+++ b/lib/Components/components/window/header.html
@@ -1,7 +1,7 @@
-<template id="window-header-template">
+<template id="window-header">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
-		@import "/modules/wwi/component/design/ui/white.css";
+		@import "modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/ui/white.css";
 		:host {
 			position: absolute;
 			left:0;
