--- a/lib/Components/components/navigator/buttons/design.css
+++ b/lib/Components/components/navigator/buttons/design.css
@@ -1,4 +1,4 @@
-@import "/modules/wwi/component/design/host.css";
+@import "../../../modules/wwi/component/design/host.css";
 :host{
     --color:var(--watermelon);
     --background:rgba(255,255,255,0.1);
