--- a/lib/Components/components/navigator/design/component.css
+++ b/lib/Components/components/navigator/design/component.css
@@ -1,4 +1,4 @@
-@import "/modules/wwi/component/design/host.css";
+@import "../../modules/wwi/component/design/host.css";
 :host{
     --navigator-color:var(--squash);
     --navigator-background:var(--dark);
