--- a/lib/Components/components/window/body.html
+++ b/lib/Components/components/window/body.html
@@ -1,7 +1,7 @@
-<template id="window-body-template">
+<template id="window-body">
 	<style>
-		@import "/modules/wwi/component/design/host.css";
-		@import "/modules/wwi/component/design/ui/white.css";
+		@import "modules/wwi/component/design/host.css";
+		@import "modules/wwi/component/design/ui/white.css";
 		:host {
 			display: block;
 			position: relative;
